<resources>
    <string name="AddBookmark">Add bookmark</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="History">History</string>
    <string name="Search">Search</string>
    <string name="Use_no_proxy">None</string>
    <string name="Yandex">Go home</string>
    <string name="ChatGpt">ChatGpt</string>
    <string name="ab_kitkat_mss">Early KitKat version set the wrong MSS value on TCP connections (#61948). Try to enable the mssfix option to workaround this bug.</string>
    <string name="ab_kitkat_mss_title">Wrong MSS value for VPN connection</string>
    <string name="ab_kitkat_reconnect">Multiple users report that the mobile connection/mobile data connection is frequently dropped while using the VPN app. The behaviour seems to affect only some mobile provider/device combination and so far no cause/workaround for the bug could be identified. </string>
    <string name="ab_kitkat_reconnect_title">Random disconnects from mobile network</string>
    <string name="ab_lollipop_reinstall">VPN apps may stop working when uninstalled and reinstalled again. For details see #80074</string>
    <string name="ab_lollipop_reinstall_title">Reinstalling VPN apps</string>
    <string name="ab_not_route_to_vpn">The configured client IP and the IPs in its network mask are not routed to the VPN. OpenVPN works around this bug by explicitly adding a route that corrosponds to the client IP and its netmask</string>
    <string name="ab_not_route_to_vpn_title">Route to the configured IP address</string>
    <string name="ab_only_cidr">Android supports only CIDR routes to the VPN. Since non-CIDR routes are almost never used, OpenVPN for Android will use a /32 for routes that are not CIDR and issue a warning.</string>
    <string name="ab_only_cidr_title">Non CIDR Routes</string>
    <string name="ab_persist_tun">Opening a tun device while another tun device is active, which is used for persist-tun support, crashes the VPNServices on the device. A reboot is required to make VPN work again. OpenVPN for Android tries to avoid reopening the tun device and if really needed first closes the current TUN before opening the new TUN device to avoid to crash. This may lead to a short window where packets are sent over the non-VPN connection. Even with this workaround the VPNServices sometimes crashes and requires a reboot of the device.</string>
    <string name="ab_persist_tun_title">Persist tun mode</string>
    <string name="ab_proxy">Android will keep using your proxy settings specified for the mobile/Wi-Fi connection when no DNS servers are set. OpenVPN for Android will warn you about this in the log.When a VPN sets a DNS server Android will not use a proxy. There is no API to set a proxy for a VPN connection.</string>
    <string name="ab_proxy_title">Proxy behaviour for VPNs</string>
    <string name="ab_secondary_users">VPN does not work at all for secondary users.</string>
    <string name="ab_secondary_users_title">Secondary tablet users</string>
    <string name="ab_tethering_44">Tethering works while the VPN is active. The tethered connection will NOT use the VPN.</string>
    <string name="ab_vpn_reachability_44">Only destination can be reached over the VPN that are reachable without VPN. IPv6 VPNs does not work at all.</string>
    <string name="ab_vpn_reachability_44_title">Remote networks not reachable</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abi_mismatch">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_new_vpn_hint">Use the &lt;img src=\"ic_menu_add\"/&gt; icon to add a new VPN</string>
    <string name="add_profile">add Profile</string>
    <string name="add_profile_name_prompt">Enter a name identifying the new Profile</string>
    <string name="add_remote">Add new remote</string>
    <string name="address">Server Address:</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="all_app_prompt">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="allow_vpn_changes">Allow changes to VPN Profiles</string>
    <string name="allowed_apps">Allowed apps: %s</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="app">OpenVPN for Android</string>
    <string name="app_name">Cheese VPN</string>
    <string name="app_name1">Cheese Browser</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbehaviour">Application behaviour</string>
    <string name="apprest_name">Name</string>
    <string name="apprest_name_desc">Name of the VPN profile</string>
    <string name="apprest_ovpn">Config</string>
    <string name="apprest_ovpn_desc">Content of the OpenVPN configuration file. These files are usually have the extension .ovpn (sometimes also .conf) and are plain text multi line configuration files. If your MDM does not support multiline configuration entries, you can also use a base64 encoded string here. A text file can be converted to base64 using openssl base64 -A -in</string>
    <string name="apprest_uuid">UUID</string>
    <string name="apprest_uuid_desc">Unique UUID that identifies the profile (example: 0E910C15–9A85-4DD9-AE0D-E6862392E638). Generate using uuidgen or similar tools</string>
    <string name="apprest_ver">Version of the managed configuration schema (Currently always 1)</string>
    <string name="apprest_vpnconf">VPN configuration</string>
    <string name="apprest_vpnlist">List of VPN configurations</string>
    <string name="as_servername">AS servername</string>
    <string name="auth_dialog_message">Enter the authentication digest used for OpenVPN. Leave empty to use default digest.</string>
    <string name="auth_dialog_title">Enter packet authentication method</string>
    <string name="auth_failed_behaviour">Behaviour on AUTH_FAILED</string>
    <string name="auth_pwquery">Password</string>
    <string name="auth_username">Username</string>
    <string name="avghour">Average per hour</string>
    <string name="avgmin">Average per minute</string>
    <string name="backup_dns">Backup DNS Server</string>
    <string name="basic">Basic</string>
    <string name="baterry_consumption">In my personal tests the main reason for high battery consumption of OpenVPN are the keepalive packets. Most OpenVPN servers have a configuration directive like \'keepalive 10 60\' which causes the client and server to exchange keepalive packets every ten seconds. &lt;p&gt; While these packets are small and do not use much traffic, they keep the mobile radio network busy and increase the energy consumption. (See also &lt;a href=https://developer.android.com/training/efficient-downloads/efficient-network-access.html#RadioStateMachine&gt;The Radio State Machine | Android Developers&lt;/a&gt;) &lt;p&gt; This keepalive setting cannot be changed on the client. Only the system administrator of the OpenVPN can change the setting. &lt;p&gt; Unfortunately using a keepalive larger than 60 seconds with UDP can cause some NAT gateways to drop the connection due to an inactivity timeout. Using TCP with a long keep alive timeout works, but tunneling TCP over TCP performs extremely poorly on connections with high packet loss. (See &lt;a href=http://sites.inka.de/bigred/devel/tcp-tcp.html&gt;Why TCP Over TCP Is A Bad Idea&lt;/a&gt;)</string>
    <string name="battery_consumption_title">Battery consumption</string>
    <string name="bits_per_second">%.0f bit/s</string>
    <string name="blocklocal_summary">Networks directly connected to the local interfaces will not be routed over the VPN. Deselecting this option will redirect all traffic indented for local networks to the VPN.</string>
    <string name="blocklocal_title">Bypass VPN for local networks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bouncy_castle">Bouncy Castle Crypto APIs</string>
    <string name="broken_image_cert">Got an exception trying to show the Android 4.0+ certificate selection dialog. This should never happen as this a standard feature of Android 4.0+. Maybe your Android ROM support for certificate storage is broken</string>
    <string name="broken_image_cert_title">Error showing certificate selection</string>
    <string name="broken_images">Broken Images</string>
    <string name="broken_images_faq">&lt;p&gt;Official HTC images are known to have a strange routing problem causing traffic not to flow through the tunnel (See also &lt;a href=https://github.com/schwabe/ics-openvpn/issues/18&gt;Issue 18&lt;/a&gt; in the bug tracker.)&lt;/p&gt;&lt;p&gt;Older official SONY images from Xperia Arc S and Xperia Ray have been reported to be missing the VPNService completely from the image. (See also &lt;a href=https://github.com/schwabe/ics-openvpn/issues/29&gt;Issue 29&lt;/a&gt; in the bug tracker.)&lt;/p&gt;&lt;p&gt;On custom build images the tun module might be missing or the rights of /dev/tun might be wrong. Some CM9 images need the Fix ownership option under Device specific hacks enabled.&lt;/p&gt;&lt;p&gt;Most importantly: If your device has a broken Android image, report it to your vendor. The more people who report an issue to the vendor, the more likely they are to fix it.&lt;/p&gt;</string>
    <string name="building_configration">Building configuration…</string>
    <string name="built_by">built by %s</string>
    <string name="ca_title">CA Certificate</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="parsing">Site Translator</string>
    <string name="pdf">Pdf Viewer</string>
    <string name="vpn">VPN</string>
    <string name="translator">Translator</string>
</resources>